data/css/search.css
#search {
	position: absolute;
	top: 3.25rem;
	left: 0;
	width: 100%;
	background: rgb(var(--windowTitlebarColourLight));
	padding: 1rem;
	display: flex;
	flex-wrap: nowrap;
	-webkit-app-region: no-drag;
}

#search>#searchButtons {
	width: 12rem;
	margin: -1rem 0;
	display: flex;
	align-items: center;
}

#search>#searchButtons>button {
	width: 2.5rem;
	height: 2.5rem;
	margin: .125rem;
	border: none;
	border-radius: 2px;
	background-color: transparent;
	transition: all .2s ease;
	filter: invert(1);
}

#search>#searchButtons>button:last-of-type {
	margin-left: .75rem;
}

#search>#searchButtons>button:hover,
#search>#searchButtons>button:focus {
	cursor: pointer;
	background-color: rgba(0, 0, 0, .1);
}

@keyframes forward {
	40% {
		background-position-x: 200%;
	} 45% {
		opacity: 0;	
	} 50% {
		background-position-x: -200%;
		opacity: 0;	
	} 55% {
		opacity: 1;	
	} 100% {
		background-position-x: center;
	}
}

@keyframes back {
	40% {
		background-position-x: -200%;
	} 45% {
		opacity: 0;	
	} 50% {
		background-position-x: 200%;
		opacity: 0;	
	} 55% {
		opacity: 1;	
	} 100% {
		background-position-x: center;
	}
}

#search>#searchButtons>#back {
	background-image: url("../images/back.png");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 60%;
}

#search>#searchButtons>#forward {
	background-image: url("../images/forward.png");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 60%;
}

#search>#searchButtons>#refresh {
	background-image: url("../images/refresh.png");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 60%;
}

@keyframes rotate {
	from {
		transform: rotate(0deg);
	} to {
		transform: rotate(360deg);		
	}
}

#search>#searchButtons>#refresh.loading {
	animation: rotate .75s linear infinite;
	background-image: url("../images/loading.png");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 75%;
	transform-origin: center center;
}

@keyframes dirUp {
	40% {
		background-position-y: -200%;
	} 45% {
		opacity: 0;	
	} 50% {
		background-position-y: 200%;
		opacity: 0;	
	} 55% {
		opacity: 1;	
	} 100% {
		background-position-y: center;
	}
}

#search>#searchButtons>#dirUp {
	background-image: url("../images/dirUp.png");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 60%;
}

#search>#searchbar {
	flex-basis: 100%;
	border-radius: 4px;
	box-shadow: 0 .1rem .25rem 0 rgba(0, 0, 0, .1);
	background: white;
	display: flex;
	position: relative;
	height: 3.5rem;
	overflow-x: auto;
}

#searchbar::-webkit-scrollbar {
	height: 0rem;
}

#search>#searchbar>#searchbarSpans {
	display: flex;
}

#search>#searchbar>input {
	border: none;
	background: none;
	z-index: 1;
	padding: 1rem;
	min-width: 50%;
}

#search>#searchbar>#searchbarSpans:not(:empty)+input {
	padding-left: 1.25rem;
}

#search>#searchbar>#searchbarSpans>span {
	border-radius: 4px;
	padding: .75rem .25rem;
	margin: .25rem .5rem;
	cursor: pointer;
	position: relative;
	flex-shrink: 0;
	transition: opacity .5s ease, margin-left .33s ease, margin-right .33s ease;
}

#search>#searchbar>#searchbarSpans>span:hover,
#search>#searchbar>#searchbarSpans>span:focus {
	background: rgba(var(--windowTitlebarColour), .1);
}

#search>#searchbar>#searchbarSpans>span::after {
	display: block;
	content: "";
	background-size: 85%;
	width: 1rem;
	height: 100%;
	position: absolute;
	left: 100%;
	top: 0;
}

#search>#searchbar>#searchbarSpans>span:not(:last-of-type)::after {
	background: url("../images/forward.png") no-repeat center center;
	background-size: 85%;
}

#search>#searchbar>#searchbarSpans>span:last-of-type::after {
	background: url("../images/search.png") no-repeat center center;
	background-size: 85%;
	margin-left: .5rem;
	opacity: .5;
	top: 1.5%;
}

#search>#searchbar>#searchbarSpans:not(:hover)>span:nth-of-type(n+2):not(:last-of-type) {
	width: 2rem;
	text-overflow: ellipsis;
  white-space: nowrap;
	overflow: hidden;
	padding-left: .5rem;
}

#search>#searchbar>#searchbarSpans:not(:hover)>span:nth-of-type(n+2)+span:not(:last-of-type) {
	width: 0;
	opacity: 0;
	margin: 0;
	padding: 0;
}

#search>#searchbar>#searchbarSpans:not(:hover)>span:nth-of-type(n+2)+span:last-of-type::before {
	display: block;
	content: "";
	width: 1rem;
	position: absolute;
	top: 0;
	left: -.95rem;
	height: 100%;
	background: url("../images/forward.png") no-repeat center center;
	background-size: .9rem;
}

